--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "react": "15.4.2",
+    "react-dom": "^15.4.2",
     "react-native": "0.41.2"
   },
   "devDependencies": {
@@ -20,6 +21,8 @@
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
     "jest": "18.1.0",
+    "react-addons-test-utils": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-test-renderer": "15.4.2"
   },
   "jest": {
