--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,5 +7,8 @@
   ],
   "env": {
     "jest": true
+  },
+  "rules": {
+    "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx"] }]
   }
 }
